# nodeeditor

./: .clang-tidy  .gitignore  CMakeLists.txt  build.cmake  doxygen.cmake
examples/: CMakeLists.txt
examples/calculator/: AdditionModel.hpp  Converters.cpp  Converters.hpp  DecimalData.hpp  DivisionModel.hpp  IntegerData.hpp  MathOperationDataModel.cpp  MathOperationDataModel.hpp  ModuloModel.cpp  ModuloModel.hpp  MultiplicationModel.hpp  NumberDisplayDataModel.cpp  NumberDisplayDataModel.hpp  NumberSourceDataModel.cpp  NumberSourceDataModel.hpp  SubtractionModel.hpp  main.cpp
examples/connection_colors/: main.cpp  models.hpp
examples/custom/: CMakeLists.txt  CustomLabel.cpp  CustomLabel.hpp  FormData.hpp  Receiver.cpp  Receiver.hpp  Receiver.ui  ReceiverNode.cpp  ReceiverNode.hpp  Sender.cpp  Sender.hpp  Sender.ui  SenderNode.cpp  SenderNode.hpp  main.cpp
examples/example2/: TextData.hpp  TextDisplayDataModel.cpp  TextDisplayDataModel.hpp  TextSourceDataModel.cpp  TextSourceDataModel.hpp  main.cpp
examples/headless/: main.cpp  models.hpp
examples/images/: ImageLoaderModel.cpp  ImageLoaderModel.hpp  ImageShowModel.cpp  ImageShowModel.hpp  PixmapData.hpp  main.cpp
examples/styles/: main.cpp  models.hpp
include/nodes/: Compiler.hpp  CompositeGeometry.hpp  Connection.hpp  ConnectionGeometry.hpp  ConnectionGraphicsObject.hpp  ConnectionID.hpp  ConnectionState.hpp  ConnectionStyle.hpp  DataFlowModel.hpp  DataFlowScene.hpp  DataModelRegistry.hpp  Export.hpp  FlowScene.hpp  FlowSceneModel.hpp  FlowView.hpp  FlowViewStyle.hpp  FrameGeometry.hpp  Node.hpp  NodeComposite.hpp  NodeData.hpp  NodeDataModel.hpp  NodeGeometry.hpp  NodeGraphicsData.hpp  NodeGraphicsFrame.hpp  NodeGraphicsObject.hpp  NodeImp.hpp  NodeIndex.hpp  NodePainterDelegate.hpp  NodeState.hpp  NodeStyle.hpp  OperatingSystem.hpp  Port.hpp  PortType.hpp  QStringStdHash.hpp  QUuidStdHash.hpp  Serializable.hpp  Style.hpp  TypeConverter.hpp  memory.hpp  types.hpp
src/: CompositeGeometry.cpp  Connection.cpp  ConnectionBlurEffect.cpp  ConnectionBlurEffect.hpp  ConnectionGeometry.cpp  ConnectionGraphicsObject.cpp  ConnectionPainter.cpp  ConnectionPainter.hpp  ConnectionState.cpp  ConnectionStyle.cpp  DataFlowModel.cpp  DataFlowScene.cpp  DataModelRegistry.cpp  FlowScene.cpp  FlowSceneModel.cpp  FlowView.cpp  FlowViewStyle.cpp  FrameDataModel.hpp  FrameGeometry.cpp  FrameImp.hpp  FramePainter.cpp  FramePainter.hpp  Node.cpp  NodeComposite.cpp  NodeConnectionInteraction.cpp  NodeConnectionInteraction.hpp  NodeDataModel.cpp  NodeGeometry.cpp  NodeGraphicsFrame.cpp  NodeGraphicsObject.cpp  NodeImp.cpp  NodePainter.cpp  NodePainter.hpp  NodeState.cpp  NodeStyle.cpp  Properties.hpp  StyleCollection.cpp  StyleCollection.hpp  checker.hpp
test/include/: ApplicationSetup.hpp  Stringify.hpp  StubNodeDataModel.hpp
test/src/: TestDataModelRegistry.cpp  TestNodeGraphicsObject.cpp  test_dragging.cpp
